--- a/orders.html
+++ b/orders.html
@@ -21,7 +21,7 @@
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="amazon.html" class="header-link">
+        <a href="index.html" class="header-link">
           <img class="amazon-logo"
             src="images/amazon-logo-white.png">
           <img class="amazon-mobile-logo"
@@ -45,7 +45,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+          <div class="cart-quantity js-cart-quantity">0</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
@@ -55,7 +55,7 @@
       <div class="page-title">Your Orders</div>
 
       <div class="orders-grid">
-        <div class="order-container">
+        <!-- <div class="order-container">
           
           <div class="order-header">
             <div class="order-header-left-section">
@@ -98,7 +98,8 @@
 
             <div class="product-actions">
               <a href="tracking.html">
-                <button class="track-package-button button-secondary">
+                <button class="track-package-button button-secondary"
+                >
                   Track package
                 </button>
               </a>
@@ -183,8 +184,12 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
+
+    <!-- script -->
+    <script src = "data/cart.js"></script>
+    <script src = "scripts/orders.js"></script>
   </body>
 </html>
